force-app/main/default/objects/GTM_Assessment_Question__mdt/GTM_Assessment_Question__mdt.object-meta.xml
<CustomObject>
    <label>GTM Assessment Question</label>
    <pluralLabel>GTM Assessment Questions</pluralLabel>
</CustomObject>