force-app/main/default/objects/GTM_Assessment_Question__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Unticking retires a question from the questionnaire without deleting it, so historic Section_Scores__c blobs still have wording to render against.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>