force-app/main/default/objects/GTM_Assessment_Question__mdt/fields/Dimension_Key__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Key__c</fullName>
    <label>Dimension Key</label>
    <description>The machine key the answer travels under and the key stored in Section_Scores__c / Estate_Complexity_Dimensions__c, e.g. estate_scale. Must match one of GtmAssessmentScoring.DIMENSIONS (Readiness) or GtmEstateComplexity.DIMENSIONS (Complexity): the Apex list is the allowlist the scorer trusts, so a key added here alone is collected but scores nothing. Wording is editable here without a developer; the set of keys is not.</description>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>