force-app/main/default/objects/GTM_Assessment_Question__mdt/fields/Dimension_Name__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Name__c</fullName>
    <label>Dimension Name</label>
    <description>Human label for the dimension, used as the section heading in the questionnaire and in the readout breakdown (e.g. "Estate Scale &amp; Structure").</description>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>