force-app/main/default/objects/GTM_Assessment_Question__mdt/fields/Max_Answer_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Answer_Value__c</fullName>
    <label>Max Answer Value</label>
    <description>How many options this question offers: 4 for Readiness, 3 for Complexity. Carried on the record so the questionnaire renders from data alone rather than branching on the instrument.</description>
    <required>true</required>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>