force-app/main/default/objects/GTM_Assessment_Question__mdt/fields/Measures__c.field-meta.xml
<CustomField>
    <fullName>Measures__c</fullName>
    <label>Measures</label>
    <description>One line saying what the dimension actually measures, shown as helper text under the question and quoted in the readout. Internal-facing plain English, not marketing copy.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>