force-app/main/default/objects/GTM_Assessment_Question__mdt/fields/Offering_Key__c.field-meta.xml
<CustomField>
    <fullName>Offering_Key__c</fullName>
    <label>Offering Key</label>
    <description>Which GTM offering this instrument row belongs to (e.g.
        migration-accelerator). Matches GTM_Offering__mdt.Offering_Key__c.
        Every row of this type belongs to exactly one offering -- there is
        no blank/shared fallback here, unlike GTM_Assessment_Config__mdt.
    </description>
    <required>true</required>
    <length>80</length>
    <type>Text</type>
</CustomField>