force-app/main/default/objects/GTM_Assessment_Question__mdt/fields/Option_2_Label__c.field-meta.xml
<CustomField>
    <fullName>Option_2_Label__c</fullName>
    <label>Option 2 Label</label>
    <description>Answer option worth 2 point(s). Options ascend: 1 is the highest-migration-risk answer, the top option is the lowest. Complexity questions use options 1-3 only and leave Option 4 blank; the scale a question actually offers is Max_Answer_Value__c.</description>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>