force-app/main/default/objects/GTM_Assessment_Question__mdt/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <!-- Salesforce does not support `required` on a LongTextArea field -
         confirmed against this org. See Predicate_JSON__c for the same fix. -->
    <description>The question as the prospect reads it. Edit freely -- nothing in Apex matches on this string.</description>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>