force-app/main/default/objects/GTM_Assessment_Question__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description>Display order within an instrument. Ties fall back to Dimension_Key__c so the order is always deterministic.</description>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>